tests/paczka1/small_fuzzy/81722949.err
Error in line 3: fOl9s S844 47,7
Error in line 9: fOl9s S892 69,1
Error in line 6: A925 S620 34,9
